gccida/g2/get_secondary_mem
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_secondary_mem/src/reload.c:1048:32: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  get_secondary_mem( rtx x, machine_mode mode, int opnum, reload_type type) 
                               ^
                               enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_secondary_mem/src/reload.c:1048:62: error: must use 'enum' tag to refer to type 'reload_type'
rtx  get_secondary_mem( rtx x, machine_mode mode, int opnum, reload_type type) 
                                                             ^
                                                             enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_secondary_mem/src/reload.c:1051:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v7; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_secondary_mem/src/reload.c:1052:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v8; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_secondary_mem/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_secondary_mem/src/reload.c:1053:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v9; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_secondary_mem/src/reload.c:1063:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v8 = mode_class_0[mode]; 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_secondary_mem/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_secondary_mem/src/reload.c:1064:8: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( mode_class_0[v6] & 0xFFFFFFF9) == 1 ) 
       ^~~~~~~~~~~~
       mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_secondary_mem/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_secondary_mem/src/reload.c:1089:76: error: use of undeclared identifier 'reload_type'
find_reloads_address( v7, 0LL, v10->fld[0].rtx, ( rtx *)v10->fld, opnum, ( reload_type)v13, 0, 0LL); 
                                                                           ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_secondary_mem/src/obj/reload.o] Error 1
